[package]
name = "simulat0r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
clap = {version = "4", features = ["derive"]}
eyre = "0.6.8"

alloy-primitives = "0.7.7"
alloy-provider = { version = "0.2", default-features = false }
alloy-rpc-types = { version = "0.2", features = ["eth"] }
alloy-serde = { version = "0.2", default-features = false }
alloy-transport = { version = "0.2", default-features = false }
alloy-rpc-client = "0.2"
alloy-transport-http = "0.2"
alloy-sol-types = "0.2"

foundry-fork-db = "0.2.0"
foundry-evm = { git = "https://github.com/foundry-rs/foundry", package = "foundry-evm" }
foundry-common = { git = "https://github.com/foundry-rs/foundry", package = "foundry-common" }
foundry-config ={ git = "https://github.com/foundry-rs/foundry", package = "foundry-config" }

revm = { version = "12.1.0", default-features = false }
revm-primitives = { version = "7.1.0", default-features = false }
revm-inspectors = { version = "0.5", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
